trying to fix style on iphone

--- a/themes/toosimple/static/css/main.css
+++ b/themes/toosimple/static/css/main.css
@@ -14,10 +14,19 @@ body {
   display: block;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width : 500px){
   body {
     padding: 2% 2% 2% 2%;
     margin: 1% 1%;
+    width: 90%;
+  }
+}
+
+@media only screen and (min-device-width : 375px) and (max-device-width : 812px) and (-webkit-device-pixel-ratio : 3){
+  body {
+    padding: 2% 2% 2% 2%;
+    margin: 1% 1%;
+    width: 90%;
   }
 }
 
